chat: add missing selector for the whitespace fix

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -1001,7 +1001,7 @@
     Apparently they forgot to add nl-specific styles. XD
   */
   html[lang='vn'] .EopGb, html[lang='nl'] .EopGb { width: 56px }
-  html[lang='vn'], html[lang='nl'] ._2COY9 { width: 92px }
+  html[lang='vn'] ._2COY9, html[lang='nl'] ._2COY9 { width: 92px }
 
   /* Bubble tails -- experimental. */
   .tail .tail-container {
